# azblob

./: Cargo.toml  README.md
src/: main.rs
ui/: alertdialog.slint  appwindow.slint
