[package]
name = "azblob"
version = "0.1.0"
authors = ["febri <root.febri@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
serde = "1.0.202"
serde_json = "1.0.117"
slint = "1.6"

[build-dependencies]
slint-build = "1.6"
